--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ nav {
   height: 30px;
   width: 30px;
 }
+.card {
+  background-color: white;
+}
+body {
+  font-family: 'Comic Neue', cursive;
+}
